--- a/TicketingGateway/src/main/resources/application.properties
+++ b/TicketingGateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=TicketingGateway
 server.port=8282
-
+file.upload.dir=${user.home}/uploads
 spring.datasource.url=jdbc:mysql://localhost:3306/ticketingsystem
 spring.datasource.username=root
 spring.datasource.password=12345
