--- a/NotificationMicroservice/src/main/resources/application.properties
+++ b/NotificationMicroservice/src/main/resources/application.properties
@@ -1,1 +1,36 @@
 spring.application.name=NotificationMicroservice
+server.port=8484
+
+# ========== DATASOURCE & JPA ==========
+spring.datasource.url=jdbc:mysql://localhost:3306/ticketingsystem
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# ========== ACTIVEMQ / JMS ==========
+# Broker connection
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
+# Trust all packages for object messages (if you send custom DTOs)
+spring.activemq.packages.trust-all=true
+
+# ========== MAIL ==========
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username=you@example.com
+spring.mail.password=your_smtp_password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# ========== WEBSOCKET / STOMP ==========
+# (Nothing here—WebSocket settings are in code configuration)
+
+# ========== OTHER ==========
+# Enable in-memory ActiveMQ for testing if you want:
+spring.activemq.in-memory=true
