--- a/NotificationMicroservice/src/main/resources/application.properties
+++ b/NotificationMicroservice/src/main/resources/application.properties
@@ -9,28 +9,25 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# ========== ACTIVEMQ / JMS ==========
-# Broker connection
+# ActiveMQ
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
-# Trust all packages for object messages (if you send custom DTOs)
-spring.activemq.packages.trust-all=true
 
-# ========== MAIL ==========
+# Mail settings
 spring.mail.host=smtp.example.com
 spring.mail.port=587
-spring.mail.username=you@example.com
-spring.mail.password=your_smtp_password
+spring.mail.username=no-reply@example.com
+spring.mail.password=s3cr3t
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
 
-# ========== WEBSOCKET / STOMP ==========
-# (Nothing here—WebSocket settings are in code configuration)
+# Ticket Service endpoint
+ticket.service.url=http://ticket-service.local/api
 
-# ========== OTHER ==========
-# Enable in-memory ActiveMQ for testing if you want:
-spring.activemq.in-memory=true
+# Manager notification
+manager.email=manager@example.com
+
+logging.level.org.springframework.jms=DEBUG
+logging.level.org.springframework.jms.listener=DEBUG
+logging.level.org.springframework.jms.support=DEBUG
