--- a/TicketMicroservice/src/main/resources/application.properties
+++ b/TicketMicroservice/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# JMS / ActiveMQ
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
+spring.jms.pub-sub-domain=false
+
+
