--- a/TicketingGateway/pom.xml
+++ b/TicketingGateway/pom.xml
@@ -48,6 +48,11 @@
 		</dependency>
 
 		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-activemq</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.glassfish.web</groupId>
 			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
 		</dependency>
