Email Services and Feedback

--- a/NotificationMicroservice/src/main/resources/application.properties
+++ b/NotificationMicroservice/src/main/resources/application.properties
@@ -15,19 +15,18 @@ spring.activemq.user=admin
 spring.activemq.password=admin
 
 # Mail settings
-spring.mail.host=smtp.example.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=no-reply@example.com
-spring.mail.password=s3cr3t
-spring.mail.properties.mail.smtp.auth=true
+spring.mail.username=sravyapola2000@gmail.com
+spring.mail.password=lfqa zxbo vpeh klkx
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=50000
+spring.mail.properties.mail.smtp.timeout=50000
+spring.mail.properties.mail.smtp.writetimeout=50000
+spring.mail.properties.mail.smtp.from=sravyapola2000@gmail.com
+spring.mail.default-encoding=UTF-8
 
-# Ticket Service endpoint
-ticket.service.url=http://ticket-service.local/api
-
-# Manager notification
-manager.email=manager@example.com
-
-logging.level.org.springframework.jms=DEBUG
-logging.level.org.springframework.jms.listener=DEBUG
-logging.level.org.springframework.jms.support=DEBUG
+logging.level.org.springframework.mail=DEBUG
+logging.level.com.sun.mail=DEBUG
