--- a/NotificationMicroservice/pom.xml
+++ b/NotificationMicroservice/pom.xml
@@ -63,12 +63,11 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-mail</artifactId>
 		  </dependency>
-		<dependency>
-		  <groupId>com.itextpdf</groupId>
-		  <artifactId>itextpdf</artifactId>
-		  <version>5.5.13.2</version>
+		  <dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.2</version> <!-- or the latest version available -->
 		</dependency>
-
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-quartz</artifactId>
